# rutificador

./: .coverage  .editorconfig  .gitattributes  .gitignore  .pip-audit.toml  .pre-commit-config.yaml  .pylintrc  AGENTS.md  AGENTS.md.old  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GUIA_MIGRACION_v2.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SECURITY_SCANNING_NOTES.md  codex_env_diagnosis_20251124_103032.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: cversions.2.db  {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db  {C1280C06-52ED-4FB5-8D3B-D4E0EDB0A3EA}.2.ver0x0000000000000001.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-regression.yml  ci.yml  codeql.yml  conformance.yml  coveralls.yml  docs.yml  publish-package.yml  publish-to-pypi.yml  pylint.yml  quality.yml  repo-hygiene-gate.yml  security.yml  stale.yml  version-bump-gate.yml
chile_rut/: .gitignore  exceptions.py  main.py
docs/: especificacion-reglas-rut.md  index.md
docs/api/: config.md  errores.md  exceptions.md  formatter.md  procesador.md  rut.md  sugestor.md  validador.md
docs/guia/: cli.md  instalacion.md  integraciones.md  lotes.md  uso-basico.md
plans/: 001-streaming-parallel-chunksize.md  002-characterization-tests.md  003-constructor-parse-consistency.md  004-remove-dead-fallback.md  005-rigor-modes-design.md  006-SPIKE-NOTES.md  006-single-parse-core-spike.md  007-segunda-fase-calidad-rendimiento.md  008-roadmap-refresh-v1.9.md  009-mypy-strict-core.md  010-cli-tokenize-parity.md  011-spec-formal-reglas-rut.md  012-i18n-errores.md  013-v2-migration-tooling.md  014-mypy-strict-complete.md  015-supply-chain-security.md  016-data-quality-toolkit.md  017-SPIKE-NOTES.md  017-pyO3-native-spike.md  018-conformance-harness.md  README.md
rutificador/: __init__.py  calidad_datos.py  cli.py  config.py  errores.py  exceptions.py  formatter.py  main.py  procesador.py  rut.py  sugestor.py  utils.py  validador.py  version.py
rutificador/contrib/: __init__.py  _formato_comun.py  fastapi.py  pandas.py  polars.py
rutificador/contrib/pydantic/: __init__.py  _compat.py  rutstr.py
scripts/: compare_benchmarks.py  conformance.py  export_vectors.py  migrate.py
tests/: .coverage  TestRut.py  TestRutBase.py  TestRutDigitoVerificador.py  conftest.py  test_additional.py  test_audit_v2.py  test_benchmark.py  test_calidad_datos.py  test_cli.py  test_cli_formats.py  test_consistencia_parse.py  test_contrato_v1.py  test_errores.py  test_migrate.py  test_procesador_asincrono.py  test_procesador_flujo.py  test_procesador_paralelo.py  test_property.py  test_quick_wins.py  test_rutificador.py  test_spec_vectors.py  test_sugestor.py  tests.bak  tests.py  tests1.bak  tests_rut.bak  tests_rut.py  tests_rut_base.bak  tests_rut_base.py  tests_rut_digito_verificador.py
tests/benchmarks/: conftest.py  test_benchmarks_core.py
tests/contrib/: test_fastapi.py  test_pandas.py  test_polars.py  test_pydantic.py
tests/contrib/pydantic/: test_rutstr.py
tests/vectors/: conformance.json  schema.json  test_vectors_dv.json  test_vectors_validacion.json
