[tool.poetry]
name = "rutificador"
version = "1.2.0"
description = "Herramientas para validar, calcular y formatear el Rol Único Tributario (RUT) en Chile, con procesamiento por lotes y salida en múltiples formatos."
authors = ["Carlos Ortega González <carlosortega77@gmail.com>"]
license = "MIT"
homepage = "https://pypi.org/project/rutificador/"
repository = "https://github.com/cortega26/rutificador"
keywords = [
    "RUT",
    "Chile",
    "validación",
    "formateo",
    "librería",
    "id",
    "rutificador",
    "rut-chile",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tomli = { version = "^2.0", python = "<3.11" }

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^5.0"

[tool.poetry.scripts]
rutificador = "rutificador.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Usar el modo de import por defecto para que el paquete local sea descubrible
# sin instalarlo. Esto asegura que ejecutar `pytest` desde la raiz del proyecto
# funcione como se documenta en el README.
addopts = ""

[tool.poetry-dynamic-versioning]
enable = true
from-file = {source = "rutificador/version.py", pattern = "^__version__ = \"(.+)\""}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
